<resources>
    <string name="app_name">汕大顺手邦</string>
    <string name="accpet_mission">接受任务</string>
    <string name="finish_mission">✔️</string>
    <string name="delete_mission">删除任务</string>
    <string name="my_money">我的积分</string>\
    <string name="recharge">充值</string>
    <string name="cash">提现</string>
    <string name="network_reflash">网络请求失败，点击刷新重试</string>
    <string name="mission_finished">  任务已完成  </string>
    <string name="system_message_list_item_hint_get_more">>> 点击查看详细消息</string>
    <string name="system_message_list_item_hint_add_friend">>> 点击选择</string>
    <string name="system_message_list_item_hint_errand_message">>> 点击查看详细消息</string>
    <string name="system_message_list_item_hint_approval">>> 点击标注已读</string>
    <string name="navigation_errand">赏金</string>
    <string name="navigation_second_hand">闲置</string>
    <string name="navigation_study">学习</string>
    <string name="navigation_serch">寻物</string>
    <string name="spare_time_for_u">如花笑靥 似水流年</string>
    <string name="title">STFU</string>
    <string name="task">任务</string>
    <string name="personal_letter">私信</string>
    <string name="login">登录</string>
    <string name="logout">注销</string>
    <string name="exit">退出</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sign_up_email_hint">汕大邮箱</string>
    <string name="comment_hint">我的回应…</string>
    <string name="comment_send">我也说一句</string>
    <string name="edit_avatar">头像</string>
    <string name="edit_nickname">昵称</string>
    <string name="edit_signature">签名</string>
    <string name="edit_sex">性别</string>
    <string name="edit_phone">电话</string>
    <string name="verification_code">验证码</string>
    <string name="send_verification_code">获取验证码</string>
    <string name="signup">注册</string>
    <string name="signup_nickname_hint">请输入您的昵称</string>
    <string name="signup_pw1_hint">请输入您的密码</string>
    <string name="signup_pw2_hint">确认密码</string>
    <string name="login_email_hint">汕大邮箱</string>
    <string name="login_pw_hint">请输入您的密码</string>
    <string name="friend_start_chatting">私聊</string>
    <string name="friend">好友</string>
    <string name="edit_bg">个人主页背景</string>
    <string name="edit_confirm">确认</string>
    <string name="forget_pw"><u>忘记密码？</u></string>
    <string name="origin">起点</string>
    <string name="destination">终点</string>
    <string name="price">金额（元）：</string>
    <string name="deadline">截止：</string>
    <string name="send">发布</string>
    <string name="date_picker_title">截止时间</string>
    <string name="reached_limit">已达上限</string>
    <string name="wish">说出你的愿望吧！</string>
    <string name="right_content">请输入正确的内容！</string>
    <string name="comment_number">评论 %1s</string>
    <string name="like_number">赞 %1s</string>
    <string name="not_solved">🔔未解决</string>
    <string name="refresh_success">刷新成功！</string>
    <string name="network_error">网络错误！</string>
    <string name="search">搜索</string>
    <string name="clear">清除记录</string>
    <string name="login_expire">登录失效，请重新登录！</string>
    <string name="login_request">请先登录</string>
    <string name="refresh_finished">刷新成功!</string>
    <string name="confirm_finish">确认完成</string>
    <string name="not_done">未完成</string>
    <string name="cancel">❌</string>


</resources>

