<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single" />
    <item
        android:id="@+id/slider_menu_task"
        android:icon="@drawable/ic_task"
        android:title="@string/task" />

    <item
        android:id="@+id/slider_menu_personal_letter"
        android:icon="@drawable/ic_personal_letter"
        android:title="@string/personal_letter" />


    <item
        android:id="@+id/slider_menu_friend"
        android:icon="@drawable/ic_login"
        android:title="@string/friend" />
    <item
        android:id="@+id/slider_menu_login"
        android:icon="@drawable/ic_login"
        android:title="@string/login" />

    <item
        android:id="@+id/slider_menu_exit"
        android:icon="@drawable/ic_exit"
        android:title="@string/exit" />

</menu>