<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/post_header"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:background="@drawable/touch_bg_pink"
    android:orientation="horizontal"
    android:weightSum="5">

    <LinearLayout
        android:id="@+id/layout_avatar"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="0.5dp"
        android:layout_weight="0.8"
        android:gravity="center">

        <ImageView
            android:id="@+id/post_avatar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:foreground="@drawable/rounded_fg"
            android:src="@mipmap/ic_launcher" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.6"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="NestedWeights">

            <TextView
                android:id="@+id/post_nick_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:gravity="start|center"
                android:text="@string/app_name" />

        </LinearLayout>

        <TextView
            android:id="@+id/post_date"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="start|center"
            android:text="2018-11-4" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.2">

        <TextView
            android:id="@+id/post_reward"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="XXX" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_weight="1.4"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/post_accept"
            android:layout_width="wrap_content"
            android:layout_height="30dip"
            android:layout_gravity="center"
            android:background="@drawable/button_style"
            android:gravity="center"
            android:text="@string/accpet_mission"
            android:textColor="#fb7299"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/post_finish"
            android:layout_width="@dimen/dp_40"
            android:layout_height="30dip"
            android:layout_margin="@dimen/dp_2"
            android:background="@drawable/button_style"
            android:text="@string/finish_mission"
            android:textColor="#fb7299"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/post_cancel"
            android:layout_width="@dimen/dp_40"
            android:layout_height="30dp"
            android:layout_margin="@dimen/dp_2"
            android:background="@drawable/button_style"
            android:text="@string/cancel"
            android:textColor="#fb7299"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/confirm_finish"
            android:layout_width="48dp"
            android:layout_height="30dip"
            android:background="@drawable/button_style"
            android:text="@string/finish_mission"
            android:textColor="#fb7299"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/post_not_finish"
            android:layout_width="48dp"
            android:layout_height="30dip"
            android:layout_margin="@dimen/dp_2"
            android:background="@drawable/button_style"
            android:text="@string/cancel"
            android:textColor="#fb7299"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/post_delete"
            android:layout_width="wrap_content"
            android:layout_height="30dip"
            android:layout_margin="@dimen/dp_2"
            android:background="@drawable/button_style"
            android:text="@string/delete_mission"
            android:textColor="#fb7299"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/post_status_text"
            android:layout_width="wrap_content"
            android:layout_height="30dip"
            android:layout_gravity="center"
            android:background="@color/white"
            android:gravity="center"
            android:padding="@dimen/dp_2"
            android:text="@string/mission_finished"
            android:textColor="#fb7299"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>
