<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <include layout="@layout/custom_toolbar_back"
        android:id="@+id/mission_received_top"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:id="@+id/shadow"
        android:layout_below="@+id/mission_received_top"
        android:background="@drawable/toolbar_dropshadow" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"

            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/money_pic"
                android:src="@drawable/money_icon"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/my_money_text"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_marginTop="20dip"
                android:textSize="20dip"
                android:textColor="#000"
                android:text="@string/my_money"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/my_money_value"
                android:layout_gravity="center"
                android:layout_marginTop="20dip"
                android:textSize="35dip"
                android:textColor="#000"
                android:textStyle="bold"
                android:text="165"
                android:layout_height="wrap_content" />

            <Button
                android:layout_width="wrap_content"
                android:id="@+id/recharge_button"
                android:text="@string/recharge"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/button_style"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/cash_button"
                android:layout_width="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_gravity="center"
                android:text="@string/cash"
                android:background="@drawable/button_style_white"
                android:layout_height="wrap_content" />
        </LinearLayout>

</android.widget.RelativeLayout>