<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEAEA"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/custom_toolbar_back" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/logo_11"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/iv_icon_centre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_bili_logo" />

    </RelativeLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6">


        <LinearLayout
            android:id="@+id/login_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:weightSum="1">

                <EditText
                    android:id="@+id/change_pw_email"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.6"
                    android:background="#fff"
                    android:drawablePadding="10dp"
                    android:ellipsize="start"
                    android:hint="@string/sign_up_email_hint"
                    android:inputType="text"
                    android:paddingStart="@dimen/sp_16"
                    android:singleLine="true"
                    android:textColor="#222222"
                    android:textColorHint="#B3B3B3"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/et_username_back"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.4"
                    android:background="#fff"
                    android:drawablePadding="10dp"
                    android:ellipsize="start"
                    android:enabled="false"
                    android:hint="\@stu.edu.cn"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="#222222"
                    android:textColorHint="#B3B3B3"
                    android:textSize="16sp" />

            </LinearLayout>

            <EditText
                android:id="@+id/change_pw_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:background="#fff"
                android:drawablePadding="10dp"
                android:hint="@string/signup_pw1_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="@dimen/sp_16"
                android:textColor="#222222"
                android:textColorHint="#B3B3B3"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/change_pw_password2"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:background="#fff"
                android:drawablePadding="10dp"
                android:hint="@string/signup_pw2_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="@dimen/sp_16"
                android:textColor="#222222"
                android:textColorHint="#B3B3B3"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:weightSum="1">

                <EditText
                    android:id="@+id/change_pw_verification_code"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.6"
                    android:background="#fff"
                    android:drawablePadding="10dp"
                    android:ellipsize="start"
                    android:hint="@string/verification_code"
                    android:inputType="text"
                    android:paddingStart="@dimen/sp_16"
                    android:singleLine="true"
                    android:textColor="#222222"
                    android:textColorHint="#B3B3B3"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />

                <Button
                    android:id="@+id/change_pw_btn_send_verification_code"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/sp_12"
                    android:layout_weight="0.4"
                    android:background="@drawable/touch_bg_pink"
                    android:gravity="center"
                    android:text="@string/send_verification_code"
                    android:textColor="#fff"
                    android:textSize="12sp" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <Button
        android:id="@+id/change_pw_confirm"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.8"
        android:background="@drawable/touch_bg_pink"
        android:gravity="center"
        android:text="@string/edit_confirm"
        android:textColor="#fff"
        android:textSize="16sp" />


</LinearLayout>

