<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar_send_post" />
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/toolbar_dropshadow"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">


            <EditText
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/wish"
                android:lines="3"
                android:paddingLeft="@dimen/screen_edge_horizontal_margin"
                android:paddingTop="@dimen/screen_edge_vertical_margin"
                android:paddingRight="@dimen/screen_edge_horizontal_margin"
                android:paddingBottom="@dimen/screen_edge_vertical_margin">
                <!--<requestFocus />-->
            </EditText>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/image_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:background="?colorBackgroundFloating"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/view">

            <ImageButton
                android:id="@+id/add_image"
                android:layout_width="@dimen/touch_target_size"
                android:layout_height="@dimen/touch_target_size"
                android:layout_marginLeft="@dimen/toolbar_button_left_margin"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/icon_button_padding"
                android:src="@drawable/ic_action_photo"
                app:tint="?colorControlNormal"
                tools:ignore="MissingPrefix" />


            <ImageButton
                android:id="@+id/add_more_image"
                android:layout_width="@dimen/touch_target_size"
                android:layout_height="@dimen/touch_target_size"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/icon_button_padding"
                android:src="@drawable/ic_action_add_photo"
                android:visibility="gone"
                app:tint="?colorControlNormal"
                tools:ignore="MissingPrefix" />

            <ImageButton
                android:id="@+id/remove_all_images"
                android:layout_width="@dimen/touch_target_size"
                android:layout_height="@dimen/touch_target_size"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/icon_button_padding"
                android:src="@drawable/ic_action_remove"
                android:visibility="gone"
                app:tint="?colorControlNormal"
                tools:ignore="MissingPrefix" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:background="@drawable/touch_bg"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout5">

            <EditText
                android:id="@+id/origin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="32dp"
                android:hint="@string/origin"
                android:inputType="text" />

            <EditText
                android:id="@+id/destination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:hint="@string/destination"
                android:inputType="text" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"

            android:background="@drawable/touch_bg"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/btn_time">

            <EditText
                android:id="@+id/money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:paddingStart="@dimen/dp_16"
                android:paddingEnd="@dimen/dp_16" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/touch_bg"
            android:text="@string/deadline"
            app:layout_constraintBottom_toBottomOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/material_background"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3" />


    </android.support.constraint.ConstraintLayout>


</LinearLayout>


